Bug #43266
common: admin socket compiler warning
% Done:
0%
Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Description
/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/15.0.0-8305-g7a409d3/rpm/el7/BUILD/ceph-15.0.0-8305-g7a409d3/src/common/admin_socket.cc: In member function 'void AdminSocket::entry()': /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/15.0.0-8305-g7a409d3/rpm/el7/BUILD/ceph-15.0.0-8305-g7a409d3/src/common/admin_socket.cc:259:13: warning: ignoring return value of 'ssize_t read(int, void*, size_t)', declared with attribute warn_unused_result [-Wunused-result] ::read(m_wakeup_rd_fd, &buf, 1); ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
History
#1 Updated by Patrick Donnelly about 1 year ago
- Status changed from New to Fix Under Review
- Pull request ID set to 32192