common: handle return value from read(2)

Fixes: https://tracker.ceph.com/issues/43266
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>